# AutoIM

./: .gitignore  .pre-commit-config.yaml  .prettierignore  API.md  CHANGELOG.md  README.md  api_server.py  captcha_config.py  cliff.toml  main.py  multi_account_server.py  pyproject.toml  send_to_shop.py  test_api.py  test_config.py
.github/workflows/: build.yml
.kiro/steering/: go-comment-style.md  readme-standard.md
browser_data/: DevToolsActivePort  Local State
browser_data/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Shortcuts  Top Sites  Translate Ranker Model  TransportSecurity  Web Data
browser_data/GrShaderCache/: data_1  index
browser_data/GraphiteDawnCache/: data_0  data_1  data_2  f_000005  index
browser_data/ShaderCache/: data_1  index
browser_data/component_crx_cache/: metadata.json
browser_data/segmentation_platform/: ukm_db
config/: auto_reply_rules.yaml  config.yaml  multi_account_config.yaml
docs/: API使用指南-获取聊天记录.md  新功能-获取聊天记录.md
src/: rpa.py
src/core/: __init__.py  account_worker.py  auto_reply_engine.py  browser_controller.py  message_handler.py  message_router.py  multi_account_manager.py  session_manager.py
src/models/: __init__.py  account.py  auto_reply_rule.py  config.py  (+2 more)
tests/: test_auto_reply_engine.py  test_browser_controller.py  test_config_manager.py  test_exceptions.py  test_logger.py  test_main.py  test_math.py  test_message_handler.py  test_rpa.py  test_session_manager.py
(+584 files in other folders)
