[project]
name = "py-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
[project.optional-dependencies]
dev = [
    "black>=24",
    "isort>=5",
    "mypy>=1.12",
    "ruff>=0.7",
    "pytest>=8",
    "pytest-cov>=5",
]
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
